--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Prefer PNG favicon for broad compatibility; keep SVG fallback for sharp rendering where supported -->
+    <link rel="icon" type="image/png" href="/images/favicon.png" sizes="32x32" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/icon-512.svg" />
+    <!-- Apple touch icon (used for Add to Home Screen on iOS) -->
+    <link rel="apple-touch-icon" sizes="512x512" href="/images/icon-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#FF8170" />
+    <!-- Use tan brand color for theme / address bar -->
+    <meta name="theme-color" content="#FFF5F3" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="SlabDash" />
